# macro-market-analysis

./: .gitignore  01_market_data-exploration.ipynb  Momentum.lnk  README.md  pyproject.toml
configs/experiments/: exp_001.json
data/: market_prices.csv  market_returns.csv
data/processed/: BTC.parquet  ETH.parquet  GLD.parquet  IWM.parquet  QQQ.parquet  SPY.parquet  TLT.parquet  VTI.parquet  XLE.parquet  XLF.parquet  prices.parquet  returns.parquet
data/raw/: BTC.parquet  ETH.parquet  GLD.parquet  IWM.parquet  QQQ.parquet  SPY.parquet  TLT.parquet  VTI.parquet  XLE.parquet  XLF.parquet
docs/: momentum_family.md
docs/architecture/: download_pipeline.md  feature_loader.md  feature_pipeline.md  feature_registry.md  feature_validation_layer_implementation.md  layer_definition.md  panel_builder.md  panel_preparer.md  processed_data_pipeline.md  regimes_layer_implementation.md  system_overview.md  systemic_pipeline.md  universe_registry.md
docs/asset_layer/: volatility_family.md
docs/data/: pipeline_overview.md  processed_data_assumptions.md  processed_data_pipeline.md  raw_data_assumptions.md  (+1 more)
notebooks/: 00_download_Market_data_v1.ipynb  00_download_market_data.ipynb  01_asset_characterization.ipynb  01_data_pipeline.ipynb  01_data_pipeline_v1.ipynb  02_asset_characterization_Momentum.ipynb  02_asset_characterization_Volatility.ipynb  02_asset_characterization_v1.ipynb  02_asset_features_momentum.ipynb  03_sistemic_features.ipynb  03_systemic_features.ipynb  03_systemic_pipeline_v1.ipynb  03_systemic_pipeline_v3.ipynb  Feature_validation_layer.ipynb
(+174 files in other folders)
