[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[project]
name = "quant-research-platform"
version = "0.1.0"
description = "Feature-driven quantitative research platform"
authors = [
    {name = "Juan Manuel Giacame"}
]
requires-python = ">=3.10"


[tool.setuptools.packages.find]
where = ["src"]
